salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_AccountCountryISOCode__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AccountCountryISOCode__c</fullName>
    <label>CountryISOCode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>