salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BillingPostalCode__c</fullName>
    <label>Código Postal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>