salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_BusinessNameSPoint__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BusinessNameSPoint__c</fullName>
    <label>Razón Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>