salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_CitySPoint__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CitySPoint__c</fullName>
    <label>Ciudad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>