salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_Division__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Division__c</fullName>
    <label>Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>