salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_IndustrySPoint__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IndustrySPoint__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aeropuertos y puertos</fullName>
            </value>
            <value>
                <fullName>Agricultura</fullName>
            </value>
            <value>
                <fullName>Alimentos y bebidas</fullName>
            </value>
            <value>
                <fullName>Automotriz y autopartes</fullName>
            </value>
            <value>
                <fullName>Bancos e instituciones financieras</fullName>
            </value>
            <value>
                <fullName>Bienes de consumo</fullName>
            </value>
            <value>
                <fullName>Cemento</fullName>
            </value>
            <value>
                <fullName>Centros Comerciales</fullName>
            </value>
            <value>
                <fullName>Cerámicos</fullName>
            </value>
            <value>
                <fullName>Constructora / Ingeniería</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Educación privada</fullName>
            </value>
            <value>
                <fullName>Educación pública</fullName>
            </value>
            <value>
                <fullName>Empresas de Telecomunicación</fullName>
            </value>
            <value>
                <fullName>Entretenimientos</fullName>
            </value>
            <value>
                <fullName>Generación eléctrica</fullName>
            </value>
            <value>
                <fullName>Gestión inmobiliaria</fullName>
            </value>
            <value>
                <fullName>Gobiernos (Defensa, etc.)</fullName>
            </value>
            <value>
                <fullName>Hoteles</fullName>
            </value>
            <value>
                <fullName>Materiales y herramientas</fullName>
            </value>
            <value>
                <fullName>Metalurgia</fullName>
            </value>
            <value>
                <fullName>Minería</fullName>
            </value>
            <value>
                <fullName>Municipalidades</fullName>
            </value>
            <value>
                <fullName>Parques Industriales</fullName>
            </value>
            <value>
                <fullName>Petróleo y gas</fullName>
            </value>
            <value>
                <fullName>Planta / Distribución de agua</fullName>
            </value>
            <value>
                <fullName>Pulpa y papel</fullName>
            </value>
            <value>
                <fullName>Química farmacéutica</fullName>
            </value>
            <value>
                <fullName>Química y Petroquímica</fullName>
            </value>
            <value>
                <fullName>Retail (tiendas, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>