salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_Latitude_c__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Latitude_c__c</fullName>
    <label>Latitud</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>