salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_Longitude__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Longitude__c</fullName>
    <label>Longitud</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>