salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_Nodo__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Nodo__c</fullName>
    <label>Nodo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>