salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Puntos de Suministro</relationshipLabel>
    <relationshipName>Service_Points</relationshipName>
    <type>Lookup</type>
</CustomField>