salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_OppSolutionType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OppSolutionType__c</fullName>
    <label>Tipo de Solución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercialización de Gas Natural</fullName>
            </value>
            <value>
                <fullName>Corporativa PPA</fullName>
            </value>
            <value>
                <fullName>Distribución de Gas Natural</fullName>
            </value>
            <value>
                <fullName>Ducto Dedicado</fullName>
            </value>
            <value>
                <fullName>Eficiencia Energética</fullName>
            </value>
            <value>
                <fullName>Generación en sitio</fullName>
            </value>
            <value>
                <fullName>GNC</fullName>
            </value>
            <value>
                <fullName>GNV</fullName>
            </value>
            <value>
                <fullName>Instalación</fullName>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Movilidad Eléctrica</fullName>
            </value>
            <value>
                <fullName>Suministro Eléctrico MX</fullName>
            </value>
            <value>
                <fullName>Suministro Eléctrico Latam</fullName>
            </value>
            <value>
                <fullName>Soluciones</fullName>
            </value>
            <value>
                <fullName>Transmisión</fullName>
            </value>
            <value>
                <fullName>Gas Chile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>