salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_Quote__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Service Points</relationshipLabel>
    <relationshipName>Service_Points</relationshipName>
    <type>Lookup</type>
</CustomField>