salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_RFCSPoint__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RFCSPoint__c</fullName>
    <label>RFC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>