salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_ServiceAccount__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ServiceAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta Servicio</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Puntos de Suministro</relationshipLabel>
    <relationshipName>Service_Points</relationshipName>
    <type>Lookup</type>
</CustomField>