salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_ServicePointSecuencial__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ServicePointSecuencial__c</fullName>
    <displayFormat>PS#{000000}</displayFormat>
    <label>Secuencial Punto Suministro</label>
    <type>AutoNumber</type>
</CustomField>