salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_ServicePointShortName__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ServicePointShortName__c</fullName>
    <label>Nombre Corto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>