salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_StreetSPoint__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_StreetSPoint__c</fullName>
    <label>Calle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>