salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_Tarifa_Tension__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Tarifa_Tension__c</fullName>
    <label>Tarifa Tension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>