salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_TarifaTension__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TarifaTension__c</fullName>
    <label>Tarifa Tensión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIST</fullName>
            </value>
            <value>
                <fullName>DIT</fullName>
            </value>
            <value>
                <fullName>GDMTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>