salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/fields/OSFMX_Tension__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Tension__c</fullName>
    <label>Tension</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>