salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/listViews/OSFMX_LVServicePointStatusVtaProgreso.listView-meta.xml
<ListView>
    <fullName>OSFMX_LVServicePointStatusVtaProgreso</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>OSFMX_ServiceAccount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>vlocity_cmt__Status__c</field>
        <operation>equals</operation>
        <value>Venta en Progreso</value>
    </filters>
    <label>Puntos en Venta en Progreso</label>
</ListView>