salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/listViews/OSFMX_MyServicePointLV.listView-meta.xml
<ListView>
    <fullName>OSFMX_MyServicePointLV</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>OSFMX_ServiceAccount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Mis Puntos de Suministro</label>
</ListView>