salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/listViews/OSFMX_ServicePointListView.listView-meta.xml
<ListView>
    <fullName>OSFMX_ServicePointListView</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>OSFMX_ServiceAccount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>vlocity_cmt__Status__c</field>
        <operation>equals</operation>
        <value>Vacant</value>
    </filters>
    <filters>
        <field>vlocity_cmt__Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Puntos de Suministro Vacantes o Inactivo</label>
</ListView>