salesforce_sfdx/main/default/objects/vlocity_cmt__ServicePoint__c/listViews/OSFMX_SPInstallinProgressLV.listView-meta.xml
<ListView>
    <fullName>OSFMX_SPInstallinProgressLV</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__ServiceType__c</columns>
    <columns>OSFMX_ServiceAccount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Instalación en Progreso</label>
</ListView>